--- a/client/src/Components/ContactUs/Contact.css
+++ b/client/src/Components/ContactUs/Contact.css
@@ -65,10 +65,12 @@
 .contact_content_texts{
     /* padding: 2rem 1rem; */
     width: 50%;
-    margin-right: 4rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
     text-align: center;
     max-width: 300px;
- 
+
+    min-width: 250px;
     backdrop-filter: blur(10px); /* Apply a blur effect */
     border-radius: 10px; /* Rounded corners for the glass container */
     padding: 2rem; /* Adjust padding to your liking */
