--- a/client/src/Components/Sponsors/sponsors.css
+++ b/client/src/Components/Sponsors/sponsors.css
@@ -46,11 +46,13 @@ border: 1px solid rgba(255, 255, 255, 0.3);
     transform: scale(1.2);
   }
   .sponsHeading>h1{
+    position: relative;
+    z-index: 2;
     margin-top: 0rem;
     color: var(--green);
     display: flex;
     align-items: center;
-    font-family: var(--font-mono);
+    font-family: var(--font-heading);
     justify-content: center;
 }
 .sponsHeading > h1::after{
