--- a/client/src/Components/MakerSpace/Makerspace.css
+++ b/client/src/Components/MakerSpace/Makerspace.css
@@ -1,13 +1,13 @@
 .maker__container{
-     padding: 2rem 4rem;
+     padding: 2rem 3rem;
      color: #fff;
      display: flex;
      flex-direction: column;
+     justify-content: center;
      gap: 2rem;
 }
 
 .maker__container h1{
-    text-align: center;
     font-size: 3rem;
     font-weight: bold;
     margin-bottom: 3rem;
@@ -16,9 +16,9 @@
 .maker__about{
      max-width: 60vw;
      display: flex;
+     justify-content: center;
      margin: 0 auto;
      gap: 3rem;
-     padding: 1rem 6rem;
 }
 .maker__img{
     width: 100%;
@@ -50,13 +50,12 @@
 }
 
 .maker__about_content{
-    width: 50%;
     margin-right: 1rem;
     margin-left: 1rem;
     text-align: center;
-    max-width: 500px;
+    /* max-width: 500px; */
 
-    min-width: 350px;
+    min-width: 250px;
     backdrop-filter: blur(10px); /* Apply a blur effect */
     border-radius: 10px; /* Rounded corners for the glass container */
     padding: 2rem; /* Adjust padding to your liking */
@@ -74,6 +73,7 @@
     gap: 2rem;
     flex-wrap: wrap;
     justify-content: center;
+    align-self: center;
 }
 
 @media screen and (max-width:1024px) {
@@ -87,26 +87,46 @@
          font-size: 2.5rem;
     }
 }
-
+@media screen and (max-width: 768px) {
+    .maker__container h1,.maker__projects h1,.memories__section h1{
+         font-size: 1.5rem;
+    }
+    .maker__about_content{
+        margin-left: 0;
+        padding: 1rem;
+        margin-right: 2rem;
+    }
+    .maker__projects{
+        gap: 1.5rem;
+    }
+}
 @media screen  and (max-width:568px){
     .maker__img img{
-        height: 20rem;
-        width: 20rem;
+        height: 18rem;
+        width: 18rem;
     }
-    .maker__projects h1{
-        font-size: 2rem;
-   }
+    .memories__section{
+        margin-right: 1.5rem;
+    }
 }
 
+@media (max-width: 355px) {
+    .maker__img img{
+        height: 15rem;
+        width: 15rem;
+    }
+    .maker__about{
+        padding-right: 1rem;
+    }
+    .memories__section{
+        margin-right: 2rem;
+    }
+}
 .memories__section{
      padding: 2rem 4rem;
 }
 
-@media screen and (max-width: 768px) {
-    .memories__section h1{
-         font-size: 1.5rem;
-    }
-}
+
 .teamHeading>h1{
     position: relative;
     z-index: 2;
