--- a/client/src/Components/MakerSpace/Project.css
+++ b/client/src/Components/MakerSpace/Project.css
@@ -1,15 +1,16 @@
+/* .project__container{
+     padding: 2rem;
+} */
 .Projects__card{
     /* min-height: 70vh; */
-    width: fit-content;
+    max-width: 25vw;
     background: rgba(255, 255, 255, 0.15);
     border-radius: 10px;
     box-shadow: 0 5px 4px rgba(0, 0, 0, 0.5);
 }
 .project-img{
-    height: 20rem;
-    width: 25rem;
+    width: 100%;
     border-radius: 10px;
-    padding: 0.55rem;
 }
 .Project_card_content{
     padding: 1rem;
@@ -35,4 +36,19 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+@media (max-width: 768px){
+    .Projects__card{
+        width: 100%;
+    }
+    .Projects__card p{
+        max-width: 30rem;
+    }
+}
+
+@media (max-width: 568px) {
+    .Projects__card{
+        max-width: 255vw;
+    }
 }
