--- a/client/src/Components/MakerSpace/Makerspace.css
+++ b/client/src/Components/MakerSpace/Makerspace.css
@@ -13,59 +13,11 @@
     margin-bottom: 3rem;
 }
 
-.maker__about{
-     max-width: 60vw;
-     display: flex;
-     justify-content: center;
-     margin: 0 auto;
-     gap: 3rem;
-}
-.maker__img{
-    width: 100%;
-    height: 100%;
-    background-color: #181B3E;
-}
 .Arrow{
      background: var(--green);
      height: 0.16rem;
      width: 5.5rem;
      margin: 0 auto;
-}
-.maker__img img{
-    height: 25rem;
-    width: 25rem;
-    border-radius: 10px;
-    border: 0.5rem solid linear-gradient(to right, red, purple);
-    background: linear-gradient(to right, red, purple);
-    padding: 0.25rem;
-    transition: all 0.3s linear;
-    backdrop-filter: blur(10px); /* Apply a blur effect */
-    border-radius: 10px; /* Rounded corners for the glass container */
-    background-color:  rgb(17, 34, 64,0.57);
-}
-
-.maker__img:hover img{
-     opacity: 0.5;
-     transform: scale(1.02);
-}
-
-.maker__about_content{
-    margin-right: 1rem;
-    margin-left: 1rem;
-    text-align: center;
-    /* max-width: 500px; */
-
-    min-width: 250px;
-    backdrop-filter: blur(10px); /* Apply a blur effect */
-    border-radius: 10px; /* Rounded corners for the glass container */
-    padding: 2rem; /* Adjust padding to your liking */
-    background-color:  rgb(17, 34, 64,0.57);
-}
-
-
-.maker__about_content p{
-    color: var(--lightest-slate);
-    margin-top: 1rem;
 }
 
 .maker_project{
@@ -75,57 +27,6 @@
     justify-content: center;
     align-self: center;
 }
-
-@media screen and (max-width:1024px) {
-    .maker__about{
-        flex-direction: column;
-        /* padding: 0; */
-        margin: 0 auto;
-        padding: 0;
-    }
-    .maker__projects h1{
-         font-size: 2.5rem;
-    }
-}
-@media screen and (max-width: 768px) {
-    .maker__container h1,.maker__projects h1,.memories__section h1{
-         font-size: 1.5rem;
-    }
-    .maker__about_content{
-        margin-left: 0;
-        padding: 1rem;
-        margin-right: 2rem;
-    }
-    .maker__projects{
-        gap: 1.5rem;
-    }
-}
-@media screen  and (max-width:568px){
-    .maker__img img{
-        height: 18rem;
-        width: 18rem;
-    }
-    .memories__section{
-        margin-right: 1.5rem;
-    }
-}
-
-@media (max-width: 355px) {
-    .maker__img img{
-        height: 15rem;
-        width: 15rem;
-    }
-    .maker__about{
-        padding-right: 1rem;
-    }
-    .memories__section{
-        margin-right: 2rem;
-    }
-}
-.memories__section{
-     padding: 2rem 4rem;
-}
-
 
 .teamHeading>h1{
     position: relative;
@@ -155,4 +56,70 @@
     height: 3px;
     border-radius: 1rem;
     margin-right: 0.5rem;
+}
+.memories__section{
+    padding: 2rem 4rem;
+}
+
+.maker__about{
+    max-width: 80vw;
+    display: flex;
+    justify-content: center;
+    gap: 4rem;
+    padding: 2rem 4rem;
+    z-index: 99;
+}
+.maker__img img{
+    width: 100%;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    z-index: 99;
+}
+.maker__about_content{
+    width: fit-content;
+    padding: 2rem;
+    color: var(--slate);
+    background-color: rgba(6, 16, 32, 0.57);
+    box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.6);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    gap: 2rem;
+    border-radius: 10px;
+    z-index: 99;
+}
+@media screen and (max-width:1024px) {
+    .maker__projects h1{
+         font-size: 2.5rem;
+    }
+    .maker__about{
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 768px) {
+    .maker__container h1,.maker__projects h1,.memories__section h1{
+         font-size: 1.5rem;
+    }
+    .maker__project{
+        gap: 1.5rem;
+    }
+    .maker__about{
+        max-width: 100vw;
+        padding: 0;
+    }
+    .maker__about_content{
+        width: 100%;
+    }
+}
+@media screen  and (max-width:568px){
+    .memories__section{
+        margin-right: 1.5rem;
+    }
+}
+
+@media (max-width: 355px) {
+    .memories__section{
+        margin-right: 2rem;
+    }
 }
