added responsiveness in FAQ

--- a/client/src/Components/Faq/Accordian.css
+++ b/client/src/Components/Faq/Accordian.css
@@ -20,7 +20,13 @@
     justify-content: center;
     align-items: center;
     padding: 20px 60px;
+    gap: 2rem;
   }
+
+  .snowman{
+    height: 600px;
+  }
+
   .wrapper{
     border-bottom: 1px solid white;
     overflow: hidden;
@@ -74,27 +80,14 @@
     font-style: italic;
   }
 
-  .snowman{
-    /* height: 600px; */
-    /* margin-right: 50px; */
-    /* position:fixed ; */
-  }
-
-  @media screen and (max-width: 960px) {
+  @media screen and (max-width: 640px) {
     .snowman{
-      height: 380px;
-      margin: 0px;
-      /* position: ; */
+      height: 400px;
     }
   }
 
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 1024px) {
     .acc-container{
       flex-direction: column;
-      gap: 20px;
-    }
-
-    .container{
-      width: 90vw;
     }
   }
