--- a/client/src/Components/Faq/Accordian.css
+++ b/client/src/Components/Faq/Accordian.css
@@ -21,6 +21,8 @@
     align-items: center;
     padding: 20px 60px;
     gap: 2rem;
+    z-index: 999;
+    position: relative;
   }
 
   .snowman{
@@ -30,6 +32,8 @@
   .wrapper{
     border-bottom: 1px solid white;
     overflow: hidden;
+    
+
   }
 
   .container{
