--- a/client/src/Components/Team/Team.css
+++ b/client/src/Components/Team/Team.css
@@ -1,7 +1,7 @@
 /* Team css  */
 @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Nosifer&display=swap');
 #team {
-    margin-top: 3rem;
+    margin-top: 6rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -149,8 +149,7 @@
 /* NameCard css */
 
 .nameCard {
-    margin: 1rem;
-    padding: 1rem;
+    margin: 1.5rem 2rem;
     width: 18rem;
     height: 7rem;
     background-color: rebeccapurple;
@@ -168,9 +167,7 @@
 }
 
 .nameCard > div {
-    width: 90%;
-    max-width: 15rem;
-    min-width: 12rem;
+    width: 15rem;
     height: 5rem;
     padding: 1rem;
     text-align: center;
@@ -231,10 +228,5 @@ p {
     }
     .teamHeading>h1::after {
         display: none !important;
-    }
-}
-@media only screen and (max-width: 400px) {
-    .team_executives {
-       min-width: 18rem;
     }
 }
