--- a/client/src/Components/Sponsors/sponsors.css
+++ b/client/src/Components/Sponsors/sponsors.css
@@ -1,78 +1,75 @@
-
 .sponsor-section {
-    margin-top: 3em;
-    display: flex;
-    align-items: center;
-    height: 35vh;
-    overflow: hidden;
-    width: 100%;
-    /* From https://css.glass */
-background: rgba(255, 255, 255, 0.2);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-border: 1px solid rgba(255, 255, 255, 0.3);
-  }
-  
-  .sponsor-scroll {
-    display: flex;
-    animation: scroll 10s linear infinite;
-  }
-  
-  @keyframes scroll {
-    0% {
-        transform: translateX(100%);
-      }
-
-      100% {
-        transform: translateX(-100%);
-      }
-      
-  }
- 
-  .sponsor-scroll:hover {
-    animation-play-state: paused;
-  }
-  
-  .sponsor-scroll img {
-    width: 150px;
-    margin: 0 20px;
-    transition: transform 0.3s, width 0.3s;
-  }
-  
-  .sponsor-scroll img:hover {
-    opacity: 0.7;
-    transform: scale(1.2);
-  }
-  .sponsHeading>h1{
-    position: relative;
-    z-index: 2;
-    margin-top: 0rem;
-    color: var(--green);
-    display: flex;
-    align-items: center;
-    font-family: var(--font-heading);
-    justify-content: center;
-}
-.sponsHeading > h1::after{
-    content: '';
-    display: block;
-    background-color: var(--green);
-    width: 10rem;
-    height: 3px;
-    border-radius: 1rem;
-    margin-left: 0.5rem;
+  margin-top: 3em;
+  display: flex;
+  align-items: center;
+  height: 7rem;
+  overflow: hidden;
+  width: 120%;
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.sponsHeading>h1::before {
-    content: '';
-    display: block;
-    background-color: var(--green);
-    width: 10rem;
-    height: 3px;
-    border-radius: 1rem;
-    margin-right: 0.5rem;
+.sponsor-scroll {
+  display: flex;
+  animation: scroll 10s linear infinite;
 }
-  
-  
+
+@keyframes scroll {
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.sponsor-scroll:hover {
+  animation-play-state: paused;
+}
+
+.sponsor-scroll img {
+  height: 5rem;
+  margin: 0 20px;
+  transition: transform 0.3s, width 0.3s;
+}
+
+.sponsor-scroll img:hover {
+  opacity: 0.7;
+  transform: scale(1.2);
+}
+
+.sponsHeading > h1 {
+  position: relative;
+  z-index: 2;
+  margin-top: 0rem;
+  color: var(--green);
+  display: flex;
+  align-items: center;
+  font-family: var(--font-heading);
+  justify-content: center;
+  text-align: center;
+}
+.sponsHeading > h1::after {
+  content: "";
+  display: block;
+  background-color: var(--green);
+  width: 10rem;
+  height: 3px;
+  border-radius: 1rem;
+  margin-left: 0.5rem;
+}
+
+.sponsHeading > h1::before {
+  content: "";
+  display: block;
+  background-color: var(--green);
+  width: 10rem;
+  height: 3px;
+  border-radius: 1rem;
+  margin-right: 0.5rem;
+}
