--- a/client/src/HomePage.css
+++ b/client/src/HomePage.css
@@ -53,7 +53,7 @@ body {
   background-size: cover; /* Adjust this as needed */
   background-attachment: fixed;
   overflow-x: hidden;
-  width: fit-content;
+  /* width: fit-content; */
 }
 
 ::-webkit-scrollbar {
