--- a/client/src/svgs/svg.css
+++ b/client/src/svgs/svg.css
@@ -3,15 +3,15 @@
   /* position: absolute;  */
   width: 700px;
   max-width: 100%;
+  /* font-size: ; */
   /* margin-top: 20%; */
 }
 .i-cell-text {
   text-transform: uppercase;
   animation: stroke 5s infinite alternate;
-  stroke-width: 2;
+  stroke-width: 3;
   stroke: #ffffff;
-  font-size: 120px;
-  
+  font-size: 200px;
 }
 @keyframes stroke {
   0% {
@@ -19,7 +19,7 @@
     stroke: rgb(255, 255, 255);
     stroke-dashoffset: 25%;
     stroke-dasharray: 0 50%;
-    stroke-width: 2;
+    stroke-width: 6;
   }
   70% {
     fill: rgba(72, 138, 20, 0);
@@ -28,7 +28,7 @@
   80% {
     fill: rgba(72, 138, 20, 0);
     stroke: rgb(255, 255, 255);
-    stroke-width: 4;
+    stroke-width: 12;
   }
   100% {
     fill: rgb(255, 255, 255);
@@ -39,24 +39,11 @@
   }
 }
 
-
-@media (max-width: 500px) {
-
-  .i-cell-text {
-    font-size: 20vw;
-  }
-
-}
-
-
 @media (max-width: 400px) {
-  .i-cell-text {
-    font-size: 30vw;
-  }
   .svg-icell {
     font-family: "Russo One", sans-serif;
     /* position: absolute;  */
-    width: 800px;
+    width: 700px;
     /* margin-top: 20%; */
   }
 }
