--- a/client/src/Components/LandingPage/Landing.css
+++ b/client/src/Components/LandingPage/Landing.css
@@ -26,7 +26,7 @@
   color: var(--green);
   flex-direction: column;
   align-items: flex-start;
-  margin-left: 10%;
+  margin-left: 250px;
 }
 
 .moon-bg {
@@ -56,6 +56,7 @@
     display: flex;
     align-self: center;
     font-size: 35px;
+    margin-left: 300px;
 
     /* margin-bottom: -60px; */
   }
