--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -8,7 +8,7 @@ footer {
   border-radius: 20px 20px 0 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: start;
   row-gap: 5rem;
   column-gap: 4rem;
@@ -17,13 +17,15 @@ footer {
 
 footer h1 {
   position: relative;
+  width: fit-content;
+  font-size: 2.5rem;
 }
 
 footer h1::after {
   content: "";
   background-color: rgb(228, 78, 255);
   position: absolute;
-  width: 65%;
+  width: 100%;
   height: 5px;
   bottom: -15%;
   left: 0;
@@ -53,14 +55,14 @@ a:hover {
 
 .footer-logo > h2 {
   text-decoration: underline;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   font-weight: bold;
   text-decoration-color: rgb(228, 78, 255);
   text-decoration-thickness: 5px;
 }
 
 .footer-logo > img {
-  height: 125px;
+  height: 100px;
 }
 
 /* about */
@@ -68,11 +70,11 @@ a:hover {
 .about {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.7rem;
 }
 
 .about > a {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
 }
 
 /* contacts */
@@ -80,6 +82,7 @@ a:hover {
 .contacts {
   display: flex;
   flex-direction: column;
+  scale: 1.2;
 }
 
 .contacts > a {
@@ -104,7 +107,7 @@ a:hover {
 }
 
 .socials > a {
-  scale: 1.5;
+  scale: 1.7;
 }
 
 .socials > a:hover {
@@ -120,9 +123,11 @@ a:hover {
     padding: 1rem 0;
     row-gap: 4rem;
   }
-
+  
   footer h1 {
     text-align: center;
+    font-size: 1.7rem;
+    margin: 0 auto;
   }
 
   footer h1::after {
@@ -144,6 +149,11 @@ a:hover {
 @media screen and (max-width: 300px) {
   footer {
     row-gap: 3rem;
+    text-align: center;
+  }
+
+  .about > a {
+    font-size: 1.2rem;
   }
 
   .footer-logo > h2 {
