--- a/client/src/Components/AboutUs/AboutUs.css
+++ b/client/src/Components/AboutUs/AboutUs.css
@@ -6,15 +6,15 @@
 }
 
 .About-main-container {
-margin: 0 6rem; 
+  margin: 0 6rem;
 }
 
 .About-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content:center;
+  justify-content: center;
   align-items: flex-start;
-  gap:5rem;
+  gap: 5rem;
   margin: 2rem 3rem;
   color: lightgray;
 }
@@ -25,26 +25,27 @@ margin: 0 6rem;
   margin-top: 2rem;
   display: flex;
   flex-direction: column;
-  justify-content:space-between;
-  gap:30px;
+  justify-content: space-between;
+  gap: 30px;
 }
 
 .About-item {
-/* margin-bottom: 1.2rem; */
-font-size: medium;
-font-family: "Poppins", sans-serif;
+  /* margin-bottom: 1.2rem; */
+  font-size: medium;
+  font-family: "Poppins", sans-serif;
 }
 
 .About-imgs {
-display: flex;
-margin-top: -4rem;
-/* border-top: 2px solid; */
+  display: flex;
+  margin-top: -4rem;
+  /* border-top: 2px solid; */
 }
 
 /* Applies the swinging animation to the bulb images */
 @keyframes swing {
-0%, 100% {
-  transform: rotate(5deg);
+  0%,
+  100% {
+    transform: rotate(5deg);
   }
   50% {
     transform: rotate(-5deg);
@@ -77,12 +78,12 @@ margin-top: -4rem;
 .About-item {
   font-size: 1.8rem;
   font-weight: 600;
-  display: inline-block; 
+  display: inline-block;
   animation: fade 2s ease-in-out infinite alternate; /* Adjust the duration here */
 }
 
-@media (max-width:620px) {
-  .About-content  {
+@media (max-width: 620px) {
+  .About-content {
     width: 100%;
   }
   .About-main-container {
@@ -90,10 +91,14 @@ margin-top: -4rem;
   }
   .About-container {
     margin: 2rem 0rem;
+    gap: 0;
+  }
+  .About-pic {
+    scale: 0.9;
   }
 }
-@media (max-width:550px) {
-  .About-content  {
+@media (max-width: 550px) {
+  .About-content {
     width: 100%;
   }
   .About-main-container {
