--- a/client/src/Components/LandingPage/Landing.css
+++ b/client/src/Components/LandingPage/Landing.css
@@ -1,11 +1,3 @@
-.main-landing {
-  display: flex;
-  width: 100%;
-  /* overflow-x: hidden; */
-  /* justify-content: flex-start;
-  align-items: flex-start; */
-}
-
 .landing {
   display: flex;
   flex-direction: column;
@@ -13,20 +5,15 @@
   align-items: flex-start;
   text-align: left;
   height: 100vh;
-  /* margin-left: 2rem; */
-  width: 40rem;
-  width: 100%;
+  /* margin: 60px; */
 }
 
 .welcome {
-  display: flex;
   font-size: 40px;
   font-weight: 700;
-  width: 40rem;
   color: var(--green);
-  flex-direction: column;
   align-items: flex-start;
-  margin-left: 250px;
+  margin-left: 80px;
 }
 
 .moon-bg {
@@ -38,26 +25,52 @@
   z-index: -10;
 }
 
+.social-link {
+  display: flex;
+  gap: 30px;
+  width: 30%;
+  margin-left: 80px;
+}
+
+.social-link a :hover {
+  scale: 1.05;
+  color: aqua;
+  transition: all 0.5s;
+}
+
 @media (max-width: 758px) {
   .moon-bg {
-    height: 60rem;
-    margin-top: -3rem;
-    left: 50%;
+    height: 50rem;
+    margin-top: -6rem;
+    left: 40%;
   }
   .landing {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
-    width: 40rem;
+    align-items: center;
+    height: 100vh;
+    margin: 20px;
   }
   .welcome {
-    /* margin-left: -20%; */
-    display: flex;
-    align-self: center;
-    font-size: 35px;
-    margin-left: 300px;
+    font-size: 28px;
+    margin-left: 0;
+    align-items: center;
+  }
+  .social-link {
+    margin-top: 1rem;
+    align-items: center;
+    margin-left: 0;
+    /* flex-direction: column; */
+    justify-content: center;
+    width: 100%;
+    gap: 20px;
+    scale: 0.7;
+  }
+}
 
-    /* margin-bottom: -60px; */
+@media (max-width: 400px) {
+  .moon-bg {
+    left: 15%;
   }
 }
