--- a/client/src/Components/Timeline/timeline.css
+++ b/client/src/Components/Timeline/timeline.css
@@ -26,8 +26,6 @@
 
 .event-pic img {
   width: 100%;
-  /* border: 4px solid white; */
-  /* border-radius: 20px; */
 }
 
 .title {
@@ -47,4 +45,10 @@
 }
 .timeline-content li {
   list-style: none;
+}
+
+@media (max-width: 700px) {
+  .timeline-main {
+    margin: 0 1rem;
+  }
 }
