--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -1,28 +1,34 @@
-footer {
+.footer {
+  width: 100%;
   color: white;
   background-color: rgba(98, 74, 156, 0.485);
   opacity: 50;
   backdrop-filter: blur(10px);
   margin-top: 5rem;
-  padding: 2rem 2rem;
-  border-radius: 20px 20px 0 0;
+  padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.footer > .upper-section {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: start;
   row-gap: 5rem;
   column-gap: 4rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   width: 100%;
 }
 
-footer h1 {
+.footer .upper-section h1 {
   position: relative;
   width: fit-content;
-  font-size: 2.5rem;
+  font-size: 2.25rem;
 }
 
-footer h1::after {
+.footer .upper-section h1::after {
   content: "";
   background-color: rgb(228, 78, 255);
   position: absolute;
@@ -75,7 +81,7 @@ a:hover {
 }
 
 .about > a {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
 }
 
 /* contacts */
@@ -88,10 +94,20 @@ a:hover {
 
 .contacts > a {
   margin: 0.5rem 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
 }
 
 .contacts > a:hover {
   scale: 1.1;
+}
+
+.contacts > a > span {
+  font-size: 0.9rem;
+  width: fit-content;
 }
 
 /* social accounts */
@@ -108,30 +124,42 @@ a:hover {
 }
 
 .socials > a {
-  scale: 1.7;
+  scale: 1.5;
 }
 
 .socials > a:hover {
-  scale: 2;
+  scale: 1.7;
+}
+
+/* LOWER SECTION */
+
+.footer > .lower-section > h1 {
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+.footer > .lower-section > h1 > span {
+  color: rgb(255, 174, 81);
+  text-decoration: underline;
 }
 
 /* media queries */
 
 @media screen and (max-width: 704px) {
-  footer {
+  .footer .upper-section {
     flex-direction: column;
     align-items: center;
     padding: 1rem 0;
     row-gap: 4rem;
   }
-  
-  footer h1 {
+
+  .footer .upper-section h1 {
     text-align: center;
     font-size: 1.7rem;
     margin: 0 auto;
   }
 
-  footer h1::after {
+  .footer .upper-section h1::after {
     content: "";
     background-color: rgb(228, 78, 255);
     position: absolute;
@@ -145,27 +173,75 @@ a:hover {
   .footer-logo > img {
     height: 100px;
   }
+
+  .footer > .lower-section > h1 {
+    font-size: 1.2rem;
+  }
 }
 
 @media screen and (max-width: 300px) {
-  footer {
+  .footer {
+    padding: 1rem 0;
+    width: 100%;
+  }
+
+  .footer > .upper-section {
     row-gap: 3rem;
     text-align: center;
   }
 
-  .about > a {
-    font-size: 1.2rem;
+  .footer .upper-section .container {
+    gap: 1.5rem;
   }
 
   .footer-logo > h2 {
     font-size: 1.5rem;
   }
 
-  footer h1 {
+  .footer .upper-section h1 {
     font-size: 1.5rem;
+  }
+  
+  .contacts > a > span {
+    font-size: 0.8rem;
+  }
+
+  .socials {
+    gap: 1.75rem;
+  }
+
+  .socials > a {
+    scale: 1.3;
+  }
+
+  .footer > .lower-section > h1 {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 180px) {
+  .footer .upper-section h1 {
+    font-size: 1.4rem;
+  }
+
+  .footer-logo > h2 {
+    font-size: 1.2rem;
+  }
+
+  .about > a {
+    font-size: 0.9rem;
   }
 
   .contacts > a > span {
-    font-size: 0.8rem;
+    font-size: 0.6rem;
+  }
+
+  .socials {
+    gap: 1rem;
+    margin: 0 auto;
+  }
+
+  .socials > a {
+    scale: 1;
   }
 }
