--- a/client/src/Components/Timeline/timeline.css
+++ b/client/src/Components/Timeline/timeline.css
@@ -29,13 +29,14 @@
 }
 
 .title {
-  color: white;
+  color: #00bfff;
   font-size: 24px;
   font: bold;
   width: fit-content;
 }
 
 .title-p {
+  color: #00bfff;
   font-size: 16px;
   width: fit-content;
 }
