--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -30,10 +30,12 @@ footer h1::after {
   left: 0;
   border-radius: 20px;
 }
+.footer-a {
+  transition: 0.5s all ease-out;
+}
 
-a:hover {
+.footer-a:hover {
   scale: 1.2;
-  transition: 0.2s all ease-out;
   transform-origin: center;
 }
 
@@ -106,6 +108,7 @@ a:hover {
 
 .socials > a {
   scale: 1.5;
+  transition: all 0.5s ease-in-out;
 }
 
 .socials > a:hover {
