--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -1,14 +1,13 @@
 .nav {
   display: flex;
   justify-content: space-between;
-
+  /* align-items: center; */
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   text-align: center;
   z-index: 999;
-
   background: rgba(255, 255, 255, 0.109);
   backdrop-filter: blur(90px);
   padding: 20px;
@@ -19,7 +18,6 @@
 .nav-btn {
   padding: 4px;
   margin: 0.2rem 0;
-
   font-size: 20px;
   border-radius: 10px;
   font-weight: 600;
@@ -42,10 +40,15 @@ a {
   text-decoration: none;
   color: white;
 }
+
+a:hover {
+  color: #00bfff;
+}
+
 .nav-opt {
   display: flex;
   justify-content: space-between;
-
+  align-items: center;
   width: 70%;
 }
 
@@ -89,9 +92,10 @@ a {
   }
 
   .nav-opt.show {
-    display: flex;
+    display: flex; /*
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
+    width: -webkit-fill-available;
     animation: fadeIn 1s;
     height: 100%;
   }
