--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -31,7 +31,7 @@ footer h1::after {
   border-radius: 20px;
 }
 
-a:hover {
+.footer-a:hover {
   scale: 1.2;
   transition: 0.2s all ease-out;
   transform-origin: center;
