--- a/client/src/Components/Sponsors/sponsors.css
+++ b/client/src/Components/Sponsors/sponsors.css
@@ -1,12 +1,5 @@
 .sponsor-section {
-  margin-top: 3em;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 7rem;
-  overflow: hidden;
-  width: 100%;
-  /* From https://css.glass */
+  margin-top: 6rem;
   background: rgba(255, 255, 255, 0.2);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
@@ -14,32 +7,14 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.sponsor-scroll {
-  display: flex;
-  animation: scroll 11s linear infinite;
+.spons-icon {
+  width: 100%;
+  margin: 1rem 0;
+  justify-content: space-around;
 }
-
-@keyframes scroll {
-  0% {
-    transform: translateX(100%);
-  }
-
-  100% {
-    transform: translateX(-100%);
-  }
-}
-
-.sponsor-scroll:hover {
-  animation-play-state: paused;
-}
-
-.sponsor-scroll img {
-  height: 5rem;
-  margin: 0 20px;
-  transition: transform 0.3s, width 0.3s;
-}
-
-.sponsor-scroll img:hover {
-  opacity: 0.7;
-  transform: scale(1.2);
+.spons-icon img {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  height: 100px;
+  width: 100px;
 }
