--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -38,6 +38,7 @@
   left: 0;
   border-radius: 20px;
 }
+
 .footer-a {
   transition: 0.5s all ease-out;
 }
@@ -79,7 +80,7 @@
 .about {
   display: flex;
   flex-direction: column;
-  gap: 0.7rem;
+  gap: 0.3rem;
 }
 
 .about > a {
@@ -91,16 +92,16 @@
 .contacts {
   display: flex;
   flex-direction: column;
+  gap: 0.4rem;
   scale: 1.2;
 }
 
 .contacts > a {
-  margin: 0.5rem 0;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+  transition: all 0.2s ease-in-out;
 }
 
 .contacts > a:hover {
@@ -122,7 +123,7 @@
 
 .socials {
   display: flex;
-  gap: 2.5rem;
+  gap: 2.3rem;
 }
 
 .socials > a {
@@ -153,7 +154,7 @@
     flex-direction: column;
     align-items: center;
     padding: 1rem 0;
-    row-gap: 4rem;
+    row-gap: 2.5rem;
   }
 
   .footer .upper-section h1 {
@@ -204,6 +205,10 @@
   .footer .upper-section h1 {
     font-size: 1.5rem;
   }
+
+  .about {
+    gap: 0rem;
+  }
   
   .contacts > a > span {
     font-size: 0.8rem;
@@ -223,6 +228,10 @@
 }
 
 @media screen and (max-width: 180px) {
+  .footer .upper-section {
+    row-gap: 0.75rem;
+  }
+
   .footer .upper-section h1 {
     font-size: 1.4rem;
   }
