heading updated, landing page recorrected, about us blinking text size updated

--- a/client/src/Components/AboutUs/AboutUs.css
+++ b/client/src/Components/AboutUs/AboutUs.css
@@ -32,7 +32,7 @@
 .About-item {
   /* margin-bottom: 1.2rem; */
   font-size: medium;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 
 .About-imgs {
@@ -96,6 +96,9 @@
   }
   .About-pic {
     scale: 0.9;
+  }
+  .About-item {
+    font-size: 1.6rem;
   }
 }
 @media (max-width: 550px) {
