--- a/client/src/Components/Timeline/timeline.css
+++ b/client/src/Components/Timeline/timeline.css
@@ -1,3 +1,40 @@
+.eventsheading {
+  margin-top: 2rem !important;
+}
+
+.eventsheading > h1 {
+  position: relative;
+  z-index: 2;
+  margin-top: 0rem;
+  color: var(--green);
+  display: flex;
+  align-items: center;
+  font-family: var(--font-heading);
+  justify-content: center;
+  text-align: center;
+  font-size: 42px;
+  margin-top: 4rem;
+}
+.eventsheading > h1::after {
+  content: "";
+  display: block;
+  background-color: var(--green);
+  width: 10rem;
+  height: 3px;
+  border-radius: 1rem;
+  margin-left: 0.5rem;
+}
+
+.eventsheading > h1::before {
+  content: "";
+  display: block;
+  background-color: var(--green);
+  width: 10rem;
+  height: 3px;
+  border-radius: 1rem;
+  margin-right: 0.5rem;
+}
+
 .exp-icon {
   display: flex;
   justify-content: center;
