--- a/client/src/Components/MakerSpace/Makerspace.css
+++ b/client/src/Components/MakerSpace/Makerspace.css
@@ -1,125 +1,112 @@
 .maker__container{
-  padding: 2rem 3rem;
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 2rem;
-}
-
-.maker__container h1{
- font-size: 3rem;
- font-weight: bold;
- margin-bottom: 3rem;
-}
-
-.Arrow{
-  background: var(--green);
-  height: 0.16rem;
-  width: 5.5rem;
-  margin: 0 auto;
-}
-
-.maker_project{
- display: flex;
- gap: 2rem;
- flex-wrap: wrap;
- justify-content: center;
- align-self: center;
-}
-
-.teamHeading>h1{
- position: relative;
- z-index: 2;
- margin-top: 0rem;
- color: var(--green);
- display: flex;
- align-items: center;
- font-family: var(--font-heading);
- justify-content: center;
-}
-.teamHeading > h1::after{
- content: '';
- display: block;
- background-color: var(--green);
- width: 10rem;
- height: 3px;
- border-radius: 1rem;
- margin-left: 0.5rem;
-}
-
-.teamHeading>h1::before {
- content: '';
- display: block;
- background-color: var(--green);
- width: 10rem;
- height: 3px;
- border-radius: 1rem;
- margin-right: 0.5rem;
-}
-.memories__section{
- padding: 2rem 4rem;
-}
-
-.maker__about{
- max-width: 80vw;
- display: flex;
- justify-content: center;
- gap: 4rem;
- padding: 2rem 4rem;
- z-index: 99;
-}
-.maker__img img{
- width: 100%;
- box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
- border-radius: 10px;
- z-index: 99;
-}
-.maker__about_content{
- width: fit-content;
- padding: 2rem;
- color: var(--slate);
- background-color: rgba(6, 16, 32, 0.57);
- box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.6);
- display: flex;
- flex-direction: column;
- justify-content: center;
- text-align: center;
- gap: 2rem;
- border-radius: 10px;
- z-index: 99;
-}
-@media screen and (max-width:1024px) {
- .maker__projects h1{
-      font-size: 2.5rem;
- }
- .maker__about{
-     flex-direction: column;
- }
-}
-@media screen and (max-width: 768px) {
- .maker__container h1,.maker__projects h1,.memories__section h1{
-      font-size: 1.5rem;
- }
- .maker__project{
-     gap: 1.5rem;
- }
- .maker__about{
-     max-width: 100vw;
-     padding: 0;
- }
- .maker__about_content{
+    padding: 2rem 3rem;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* gap: 2rem; */
+    overflow: hidden;
+    margin: 0 auto;
+  }
+  
+  .maker__container h1{
+   font-size: 3rem;
+   font-weight: bold;
+   margin-bottom: 3rem;
+   justify-self: center;
+  }
+  
+  .Arrow{
+    background: var(--green);
+    height: 0.16rem;
+    width: 5.5rem;
+    margin: 0 auto;
+  }
+  /* .maker__projects{
+      margin: 0 auto;
+  } */
+  .maker_project{
+   display: flex;
+   gap: 2rem;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-self: center;
+  }
+  
+  .teamHeading>h1{
+   position: relative;
+   z-index: 2;
+   margin-top: 0rem;
+   color: var(--green);
+   display: flex;
+   align-items: center;
+   font-family: var(--font-heading);
+   justify-content: center;
+  }
+  .teamHeading > h1::after{
+   content: '';
+   display: block;
+   background-color: var(--green);
+   width: 10rem;
+   height: 3px;
+   border-radius: 1rem;
+   margin-left: 0.5rem;
+  }
+  
+  .teamHeading>h1::before {
+   content: '';
+   display: block;
+   background-color: var(--green);
+   width: 10rem;
+   height: 3px;
+   border-radius: 1rem;
+   margin-right: 0.5rem;
+  }
+  
+  .maker__about{
+   justify-self: center;
+   display: flex;
+   justify-content: center;
+   gap: 4rem;
+  }
+  .maker__img img{
+   width: 100%;
+   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
+   border-radius: 10px;
+  }
+  .maker__about_content{
+   padding: 2rem;
+   color: var(--slate);
+   background-color: rgba(6, 16, 32, 0.57);
+   box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.6);
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   text-align: center;
+   gap: 2rem;
+   border-radius: 10px;
+  }
+  .memories__section{
+     max-width: 1200px;
      width: 100%;
- }
-}
-@media screen  and (max-width:568px){
- .memories__section{
-     margin-right: 1.5rem;
- }
-}
-
-@media (max-width: 355px) {
- .memories__section{
-     margin-right: 2rem;
- }
-}
+     /* aspect-ratio: 15/12; */
+     margin: 0 auto;
+     padding-bottom: 2rem;
+  }
+  @media screen and (max-width:1024px) {
+   .maker__projects h1{
+        font-size: 2.5rem;
+   }
+   .maker__about{
+       flex-direction: column;
+   }
+  }
+  @media screen and (max-width: 768px) {
+   .maker__container h1,.maker__projects h1,.memories__section h1{
+        font-size: 1.5rem;
+   }
+   .maker__project{
+       gap: 2rem;
+   }
+  }
+  
