--- a/client/src/Components/MakerSpace/Memories.css
+++ b/client/src/Components/MakerSpace/Memories.css
@@ -1,82 +1,79 @@
 .memories__container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-.btn{
-  padding: 0.25rem;
-  background: white;
-  border-radius: 50%;
-  width: 4rem;
-  height: 4rem;
-  border: none;
-  font-size: 2.5rem;
-  cursor: pointer;
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #181a2b;
-  font-weight: bold;
-}
-.btn-left{
-   left: 10px;
-}
-.btn-right{
-  right: 10px;
-}
-.slide{
-   max-width: 600px;
-   max-height: 600px;
-   border-radius: 10px;
-   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.6);
-   background: linear-gradient(to right, red, purple);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   position: relative;
+ }
+ .btn{
    padding: 0.25rem;
-} 
-.slide-hidden{
-  display: none;
-}
-
-.indicators{
-   position: absolute;
-   bottom: 2%;
-}
-.indicator{
-   margin-left: 0.5rem;
-   border-radius: 100%;
-   height: 0.85rem;
-   width: 0.5rem;
+   background: white;
+   border-radius: 50%;
+   width: 4rem;
+   height: 4rem;
    border: none;
-   box-shadow: 0px 0px 5px #666;
+   font-size: 2.5rem;
    cursor: pointer;
-   background-color: green;
-}
-.indicator-inactive{
-   background-color: #666;
-}
-
-@media screen and (max-width: 768px) {
-  /* .memories__container{
-     max-width: 70vw;
-  } */
-  .slide{
-        height: 400px;
-        width: 600px;
+   position: absolute;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   color: #181a2b;
+   font-weight: bold;
+ }
+ .btn-left{
+    left: 10px;
+ }
+ .btn-right{
+   right: 10px;
+ }
+ .slide{
+     object-fit: cover;
+     /* height: 100%; */
+     height: 90vh;
+     width: 100%;
+     display: block;
+     object-position: center;
+     border-radius: 10px;
+     box-shadow: 0px 2px 5px rgba(0,0,0,0.8);
+ } 
+ .slide-hidden{
+   display: none;
+ }
+ 
+ .indicators{
+    position: absolute;
+    bottom: 2%;
+ }
+ .indicator{
+    margin-left: 0.5rem;
+    border-radius: 100%;
+    height: 0.75rem;
+    width: 0.70rem;
+    border: none;
+    box-shadow: 0px 2px 5px #666;
+    cursor: pointer;
+    background-color: rgb(97, 186, 97);
+ }
+ .indicator-inactive{
+    background-color: #ffff;
+ }
+ 
+ @media screen and (max-width: 768px) {
+   /* .memories__container{
+      max-width: 70vw;
+   } */
+   .slide{
+         height: 400px;
+         width: 600px;
+     }
+     .btn{
+       height: 2.5rem;
+       width: 2.5rem;
+     }
+ }
+ 
+ @media screen and (max-width: 568px) {
+    .indicator{
+       display: none;
     }
-}
-
-@media screen and (max-width: 568px) {
-   .memories__container{
-      margin-left: 3.5rem;
-   }
-   .btn-left{
-       left: -8rem;
-   }
-   .btn-right{
-      right: -8rem;
-   }
-   .indicator{
-      display: none;
-   }
-}
+ }
