--- a/client/src/Components/MakerSpace/Project.css
+++ b/client/src/Components/MakerSpace/Project.css
@@ -1,95 +1,42 @@
-
-/* .project__container{
-     padding: 2rem;
-} */
 .Projects__card{
-    /* min-height: 70vh; */
-    max-width: 25vw;
-    background: rgba(255, 255, 255, 0.15);
-    border-radius: 10px;
-    box-shadow: 0 5px 4px rgba(0, 0, 0, 0.5);
-}
-.project-img{
-    width: 100%;
-    border-radius: 10px;
-}
-.Project_card_content{
-    padding: 1rem;
-}
-.Projects__card p{
-    max-width: 20rem;
-    color: var(--slate);
-}
-.project__icons{
-    display: flex;
-    justify-content: space-between;
-}
-.project__icons span{
-    color: var(--green);
-    font-size: 1.65rem;
-}
-.project__techstack p{
-    
-    color: var(--green);
-    font-size: bold;
-}
-.project_text_content{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-@media (max-width: 768px){
-    .Projects__card{
-        width: 100%;
-    }
-    .Projects__card p{
-        max-width: 30rem;
-    }
-}
-
-@media (max-width: 568px) {
-    .Projects__card{
-        max-width: 255vw;
-    }
-}
-
-.Projects__card {
   /* min-height: 70vh; */
-  width: fit-content;
+  max-width: 25vw;
   background: rgba(255, 255, 255, 0.15);
   border-radius: 10px;
   box-shadow: 0 5px 4px rgba(0, 0, 0, 0.5);
 }
-.project-img {
-  height: 20rem;
-  width: 25rem;
-  border-radius: 10px;
-  padding: 0.55rem;
+.Project-img{
+  width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
-.Project_card_content {
-  padding: 1rem;
+.Project_card_content{
+  padding: 0.75rem;
 }
-.Projects__card p {
-  max-width: 20rem;
-  color: var(--slate);
+.Projects__card p{
+  max-width: 25rem;
 }
-.project__icons {
-  display: flex;
-  justify-content: space-between;
+.project__icons{
+   display: flex;
+   justify-content: space-between;
+   color: var(--green);
+   margin-bottom: 0.75rem;
 }
-.project__icons span {
-  color: var(--green);
-  font-size: 1.65rem;
+.project__icons span{
+  font-size: 1.55rem;
 }
-
-.project__techstack p {
-  color: var(--green);
-  font-size: bold;
+.Project__techstack{
+   color: var(--green);
+   margin-top: 0.35rem;
+   font-weight: bold;
 }
-.project_text_content {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+@media screen and (max-width: 968px) {
+   .Projects__card{
+      max-width: 35vw;
+   }
 }
-
+@media (max-width: 768px){
+   .Projects__card{
+       max-width: 50vw;
+   }
+}
