--- a/client/src/Components/MakerSpace/Makerspace.css
+++ b/client/src/Components/MakerSpace/Makerspace.css
@@ -86,6 +86,10 @@
    gap: 2rem;
    border-radius: 10px;
   }
+  .maker__about_content p{
+     max-width: 80vw;
+     text-justify: inter-word;
+  }
   .memories__section{
      max-width: 1200px;
      width: 100%;
