--- a/client/src/Components/Team/Team.css
+++ b/client/src/Components/Team/Team.css
@@ -10,7 +10,7 @@
 .Teams {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center;  */
   flex-wrap: wrap;
 }
 
@@ -156,29 +156,28 @@
 }
 
 .nameCard > div {
-    width: 90%;
-    max-width: 15rem;
-    min-width: 12rem;
-    height: 4.5rem;
-    padding: 1rem;
-    text-align: center;
-    flex-direction: column;
-    box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
-    border-radius: 15px;
-    background: rgba(255, 255, 255, 0.1);
-    font-weight: 1000;
-    overflow: hidden;
-    
+  width: 90%;
+  max-width: 15rem;
+  min-width: 12rem;
+  height: 4.5rem;
+  padding: 1rem;
+  text-align: center;
+  flex-direction: column;
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  background: rgba(255, 255, 255, 0.1);
+  font-weight: 1000;
+  overflow: hidden;
 }
 .socialMediaHandles {
-    margin-top: 1rem;
+  margin-top: 0rem;
 }
 .nameCard p {
-    transition: all 0.5s;
+  transition: all 0.5s;
 }
 
-.nameCard:hover p{
-    transform: translateY(-4.5rem);
+.nameCard:hover p {
+  transform: translateY(-4.5rem);
 }
 
 /* Executives css */
